2008-10-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-events.c (group_free): Free translation domain.
	  (group_update): Use dgettext() and translation domain instead of
	  gettext().
	  (load_notification_groups): Load the optional translation domain
	  value (Translation-Domain).

	* src/hd-task-shortcut.c (hd_task_shortcut_load_from_file): Load the
	optional translation domain value and use dgettext() instead of
	gettext().

2008-10-16  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac:
	* debian/changelog: Release 0.1.2

	* debian/conffiles: Remove empty line.

2008-10-07  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/Makefile.am: Add hd-shortcuts.[ch] and hd-task-shortcut.[ch].

	* src/hd-shortcuts.c:
	* src/hd-shortcuts.h: Add support for Task Shortcut configuration via
	GConf.

	* src/hd-task-shortcut.c:
	* src/hd-task-shortcut.h: Add support for Task Shortcut applets.

	* src/hildon-home.c: Add support for Task Shortcut applets.

2008-09-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Release 0.1.0

2008-09-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/control: Update require libhildondesktop1-dev version.

2008-09-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/hildon-home.init:
	* debian/rules: Added hildon-home startup script.

2008-09-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Add gettext support.

	* src/notification-groups.conf: Add configuration file for
	notification groups.

	* src/Makefile.am: Add notification-groups.conf.

	* src/hd-incoming-event-window.c:
	* src/hd-incoming-event-window.h: Change type of time property from
	gchar* to gint64.

	* src/hd-notification-manager.c:
	* src/hd-notification-manager.h: Use the new HDNotification class from
	libhildondesktop.

	* src/hd-incoming-events.c:
	* src/hd-incoming-events.h: Use HDNotifications instead of
	notification ids. Add support for notification groups. Add support for