@@ -1,5 +1,15 @@
 2008-10-18  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	* src/hd-bookmark-shortcut.c:
+	* src/hd-bookmark-shortcut.h: Add basic Bookmark Shortcut
+	implementation.
+
+	* src/hd-shortcuts.c: Add support for bookmark shortcuts.
+
+	* src/Makefile.am: Add new files.
+
+2008-10-18  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	* src/hd-incoming-events.c (group_free): Free translation domain.
 	  (group_update): Use dgettext() and translation domain instead of
 	  gettext().
